Port improvements from p2pool-bch

--- a/web-static/share.html
+++ b/web-static/share.html
@@ -81,6 +81,7 @@
                     b.append('p').text('Hash: ').append('a').text(share.block.gentx.hash).attr('href', currency_info.tx_explorer_url_prefix+share.block.gentx.hash);
                     b.append('p').text('Coinbase (hex): ' + share.block.gentx.coinbase);
                     b.append('p').text('Coinbase (text): ' + hex2a(share.block.gentx.coinbase));
+                    b.append('p').text('Coinbase (raw): ' + share.block.gentx.raw);
                     b.append('p').text('Value: ' + share.block.gentx.value + ' ' + currency_info.symbol);
                     b.append('p').text('Last txout nonce (used by Stratum miners): ' + share.block.gentx.last_txout_nonce);
                     b.append('h3').text('Other transactions');
