feat: add modern dashboard with manual refresh controls
- New dashboard.html with dark theme, responsive grid layout
- Auto-refresh disabled by default to reduce backend load
- Manual refresh button and auto-refresh toggle on both pages
- Link to new dashboard from classic index.html

--- a/web-static/index.html
+++ b/web-static/index.html
@@ -134,7 +134,7 @@
     </head>
     <body>
         <h1>P2Pool <span class="symbol"></span></h1>
-        <p><a href="graphs.html">Graphs</a> | <a href="stratum.html">Stratum Stats</a></p>
+        <p><a href="dashboard.html"><strong>🆕 New Dashboard</strong></a> | <a href="graphs.html">Graphs</a> | <a href="stratum.html">Stratum Stats</a></p>
         <p>Version: <span id="version"></span></p>
         <p>Pool rate: <span id="pool_rate"></span> (<span id="pool_stale"></span> DOA+orphan) Share difficulty: <span id="difficulty"></span></p>
         <p>Node uptime: <span id="uptime"></span> Peers: <span id="peers_out"></span> out, <span id="peers_in"></span> in</p>
