Fix: Make table headers sticky in Recent Blocks and Current Payouts tables to prevent scrolling

--- a/web-static/dashboard.html
+++ b/web-static/dashboard.html
@@ -313,6 +313,14 @@
             max-height: 500px;
             overflow-y: auto;
             overflow-x: hidden;
+            position: relative;
+        }
+        
+        .table-scroll thead th {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            background: var(--darker);
         }
         
         .table-scroll::-webkit-scrollbar {
