Fix: Rename 'Pending Rewards' to 'Maturing Rewards' for accuracy
- Changed terminology to reflect coinbase maturity period (100 blocks in Dash)
- 'Pending' was ambiguous - could mean blockchain confirmation or coinbase maturity
- 'Maturing' accurately describes the coinbase maturity period where block rewards
  are confirmed on-chain but locked until 100 blocks pass (~4 hours 10 minutes)
- Updated label to clarify 'Coinbase maturity (100 blocks)'
- Backend API field renamed from pending_rewards to maturing_rewards

--- a/web-static/miner.html
+++ b/web-static/miner.html
@@ -524,9 +524,9 @@
                     <div class="stat-label">Confirmed payouts</div>
                 </div>
                 <div class="stat-card">
-                    <h3>Pending Rewards</h3>
+                    <h3>Maturing Rewards</h3>
                     <div class="stat-value warning" id="pending_rewards">0 DASH</div>
-                    <div class="stat-label">Awaiting confirmation</div>
+                    <div class="stat-label">Coinbase maturity (100 blocks)</div>
                 </div>
             </div>
             
@@ -669,7 +669,7 @@
                 document.getElementById('blocks_found').textContent = payouts.blocks_found || 0;
                 document.getElementById('total_rewards').textContent = d3.format('.4f')(payouts.total_estimated_rewards || 0) + ' DASH';
                 document.getElementById('confirmed_rewards').textContent = d3.format('.4f')(payouts.confirmed_rewards || 0) + ' DASH';
-                document.getElementById('pending_rewards').textContent = d3.format('.4f')(payouts.pending_rewards || 0) + ' DASH';
+                document.getElementById('pending_rewards').textContent = d3.format('.4f')(payouts.maturing_rewards || 0) + ' DASH';
                 
                 // Render blocks table
                 if (!payouts.blocks || payouts.blocks.length === 0) {
