Add consistent navigation across all pages
- Added all 5 navigation links (Dashboard, Graphs, Stratum, Miners, Classic) to every page
- Updated graphs.html with modern header matching other pages
- Standardized navigation styling and structure
- Now all pages have the same top navigation buttons for easy access

--- a/web-static/dashboard.html
+++ b/web-static/dashboard.html
@@ -837,6 +837,7 @@
                     <a href="dashboard.html" class="active">Dashboard</a>
                     <a href="graphs.html">Graphs</a>
                     <a href="stratum.html">Stratum</a>
+                    <a href="miners.html">Miners</a>
                     <a href="index.html">Classic</a>
                     <a href="javascript:manualRefresh()" class="refresh-btn" title="Refresh data">🔄 Refresh</a>
                     <a href="javascript:toggleAutoRefresh()" id="auto-refresh-btn" class="refresh-btn" title="Toggle auto-refresh">⏸ Auto-Refresh: OFF</a>
