--- a/web-static/miners.html
+++ b/web-static/miners.html
@@ -415,6 +415,7 @@
                     <a href="graphs.html">Graphs</a>
                     <a href="stratum.html">Stratum</a>
                     <a href="miners.html" class="active">Miners</a>
+                    <a href="index.html">Classic</a>
                     <a href="#" onclick="location.reload(); return false;">🔄 Refresh</a>
                 </nav>
             </div>
