--- a/web-static/stratum.html
+++ b/web-static/stratum.html
@@ -503,6 +503,7 @@
                     <a href="dashboard.html">Dashboard</a>
                     <a href="graphs.html">Graphs</a>
                     <a href="stratum.html" class="active">Stratum</a>
+                    <a href="miners.html">Miners</a>
                     <a href="index.html">Classic</a>
                     <button class="refresh-btn" onclick="manualRefresh()" title="Refresh data">🔄 Refresh</button>
                     <button class="refresh-btn" id="auto-refresh-btn" onclick="toggleAutoRefresh()" title="Toggle auto-refresh">⏸ Auto: OFF</button>
