--- a/web-static/miner.html
+++ b/web-static/miner.html
@@ -413,7 +413,8 @@
                     <a href="graphs.html">Graphs</a>
                     <a href="stratum.html">Stratum</a>
                     <a href="miners.html">Miners</a>
-                    <button onclick="location.reload()">🔄 Refresh</button>
+                    <a href="index.html">Classic</a>
+                    <a href="#" onclick="location.reload(); return false;">🔄 Refresh</a>
                 </nav>
             </div>
         </div>
