Improve worker/miner grouping and detail pages
- Fixed miner detail page to aggregate stats from all workers under base address
- Fixed miner collapse/expand toggle requiring double-click on dashboard
- Updated miners.html to group workers by base address with expandable worker tables
- Added 24h average hashrate to worker stats
- Backend now properly aggregates worker hashrates and share difficulty per miner
- Frontend graphs now aggregate data across all workers for miner detail view

--- a/web-static/dashboard.html
+++ b/web-static/dashboard.html
@@ -1302,11 +1302,12 @@
                         .on('click', function() {
                             var icon = d3.select(this).select('.folder-icon');
                             var isCollapsed = icon.classed('collapsed');
-                            icon.classed('collapsed', !isCollapsed);
+                            var newCollapsed = !isCollapsed;
+                            icon.classed('collapsed', newCollapsed);
                             
                             // Toggle worker rows
                             d3.selectAll('.worker-row[data-parent="' + minerId + '"]')
-                                .classed('hidden', isCollapsed);
+                                .classed('hidden', newCollapsed);
                         });
                     
                     // Address column with folder icon and worker count
